<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="dynamic_modules_enabled"
        android:summary="@string/pref_dynamic_modules_summary"
        android:title="@string/pref_title_dynamic_modules" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="black_white_list_enabled"
        android:summary="@string/pref_black_white_list_summary"
        android:title="@string/pref_title_black_white_list" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="enable_boot_image_deopt"
        android:summary="@string/pref_enable_boot_image_deopt_summary"
        android:title="@string/pref_title_enable_boot_image_deopt" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="disable_verbose_log"
        android:summary="@string/pref_disable_verbose_log_summary"
        android:title="@string/pref_title_disable_verbose_log" />
</PreferenceScreen>